--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -3,9 +3,10 @@
   justify-content: space-between;
   align-items: center;
   font-size: 0.93rem;
-  padding: 35px;
+  padding: 40px;
   text-transform: uppercase;
   background-color: white;
+  border-bottom: 1px solid #bbbfbf;
 
   .left-side {
     .nav-links-container {
