--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
 @import './base.scss';
 @import './navigation.scss';
+@import './home.scss';
 @import './featured-container.scss';
