--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,5 @@
 body {
   margin: 0px;
   font-family: 'Titillium Web', sans-serif;
-  background-color: $offwhite;
+  background-color: $secondary;
 }
